[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "silverman-blog-linkedin-worker"
version = "0.1.0"
description = "HTTP worker for silverman-blog-linkedin content automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
silverman_blog_linkedin = [
    "static/**/*.html",
    "static/**/*.js",
    "static/**/*.css",
    "static/**/*.svg",
    "static/**/*.ico",
    "static/**/*.woff",
    "static/**/*.woff2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
